--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <style>
+        .user-block {
+            background-color: #1a1a4b;
+            color: #fdfcfc;
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-    <script src="index.js"></script>
+    <div id="user-container"></div>
+    <script src="Kimbat.js"></script>
 </body>
 </html>
