--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -35,4 +35,71 @@
         });
     </script>
 </body>
+</html>
+ -->
+
+ <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="pogoda.css" />
+  </head>
+  <body class="body">
+    <header>
+      <div class="head">
+        <h2 class="h2">PogodaRK</h2>
+        <h3 class="ATU">алматы ауа райы -10°C</h3>
+        <form class="searh">
+          <input type="text" style="background-color: rgba(116, 116, 116, 0);" value="city" pattern="" />
+          <a href=""></a>
+          <img src="png-klev-club-p-lupa-png-8.png" class="lupa" alt="" />
+        </form>
+      </div>
+    </header>
+
+    <div class="kart">
+      <div class="ww1">
+        <div class="btns">
+          <a href="" style="color: rgb(5, 5, 5);">сегодня</a>
+          <a href="" style="color: black;">kazakhztan</a>
+        </div>
+        <div class="ww">
+          <div class="date">31 ЯНВАРЯ - 16 МАРТА</div>
+          <h2>ПТ 31.01</h2>
+          <div class="temperature">
+            <span class="jambir">❄️</span> 0° / -11°
+          </div>
+          <p class="detaly">Временами снег и порывистый ветер</p>
+          <p class="text">RealFeel: 2° | Ветер: СВ 7 км/ч</p>
+        </div>
+      </div>
+
+      <div class="ww1">
+        <div class="ww">
+          <div class="date">31 ЯНВАРЯ - 16 МАРТА</div>
+          <h2>ПТ 31.01</h2>
+          <div class="temperature">
+            <span class="jambir">❄️</span> 0° / -11°
+          </div>
+          <p class="detaly">Временами снег и порывистый ветер</p>
+          <p class="text">RealFeel: 2° | Ветер: СВ 7 км/ч</p>
+        </div>
+      </div>
+
+      <div class="ww1">
+        <div class="ww">
+          <div class="date">31 ЯНВАРЯ - 16 МАРТА</div>
+          <h2>ПТ 31.01</h2>
+          <div class="temperature">
+            <span class="jambir">❄️</span> 0° / -11°
+          </div>
+          <p class="detaly">Временами снег и порывистый ветер</p>
+          <p class="text">RealFeel: 2° | Ветер: СВ 7 км/ч</p>
+        </div>
+      </div>
+    </div>
+    <div></div>
+  </body>
 </html>
